<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ARCodeApp</string>
    <string name="action_settings">Settings</string>
    <string name="pageTitle_Login">Login</string>
	<string name="pageTitle_Welcome">Main Menu</string>
	<string name="pageTitle_Capture">Capture</string>
	<string name="pageTitle_EditProfile">Edit Profile</string>
	<string name="pageTitle_Register">Register</string>
	<string name="pageTitle_BizInfo">Business List</string>
	<string name="pageTitle_MyProcess">Image Processing Now</string>
	<string name="inputName_Username">Please Fill User Name</string>
	<string name="inputName_Password">Please Fill Password</string>
	<string name="inputName_Name">Please Fill Name</string>
	<string name="inputName_Email">Please Fill E-mail</string>
	<string name="inputName_Address">Please Fill Address</string>
	<string name="btnName_editProfile">Edit Profile</string>
	<string name="btnName_Capture">Go to Capture</string>
	<string name="btnName_MyBizList">My favorite Business</string>
	<string name="btnName_Logout">Log Out</string>
	<string name="btnName_signin">Sign In</string>
	<string name="btnName_signUp">Sign Up</string>
	<string name="btnName_Register">Register</string>
	<string name="btnName_Save">Save</string>
	<string name="btnName_Cancel">Cancel</string>
	<string name="btnName_TakePhoto">Capture</string>
	<string name="tap">Tap the image to open the camera!!</string>
	<string name="lable_username">Username</string>
	<string name="lable_password">Password</string>
	<string name="lable_name">Name</string>
	<string name="lable_email">Email</string>
</resources>
