<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingTop="10dip"
    android:paddingLeft="40dip"
    android:paddingRight="40dip"
    android:paddingBottom="10dip"
    >
    <LinearLayout
        android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pageTitle_Welcome"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_marginBottom="30dip"
            />
        <Button
            android:id="@+id/editprofile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnName_editProfile"
            />
        <Button
            android:id="@+id/capture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnName_Capture"
            />
        <Button
            android:id="@+id/mylist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnName_MyBizList"
            />
        <Button
            android:id="@+id/logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnName_Logout"
            />
    </LinearLayout>
</LinearLayout>
